--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.android.support:design:24.2.0'
     compile 'com.android.support:support-annotations:22.1.0'
+    compile 'com.android.support:gridlayout-v7:24.1.0'
 }
