--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:design:24.2.0'
     compile 'com.android.support:support-annotations:22.1.0'
     compile 'com.android.support:gridlayout-v7:24.1.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
 }
